specify align self to fix ios stretch, add padding utility

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -13,7 +13,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
   }
 }
 
@@ -34,6 +33,7 @@ img {
 .gallery__item {
   min-width: 50px;
   max-width: 50%;
+  align-self: center; /* 'stretch' default looks bad on ios */
 }
 
 .gallery__image-link {
